[package]
name = "rmq-tabulation"
version = "1.2.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/daxida/rmq-tabulation"
readme = "README.md"
description = "Rmq using extensive tabulation"
keywords = [
    "rmq",
    "sparse-table",
    "tabulation",
]

[lib]
name = "rmq"
path = "src/lib.rs"

[dev-dependencies]
rand = "0.8.5"
